packages/pattern-picker/src/styles.scss
/* stylelint-disable scss/at-import-no-partial-leading-underscore */
@import "@wordpress/base-styles/_breakpoints";
@import "@wordpress/base-styles/_mixins";

$patterns: "17-2", "black", "ella-d", "link-cloud", "matt-smith", "ose-maiko", "purple", "yellow",
	"biba", "chloe-currie", "emily", "luis-carvelleda", "mesh-gradient", "paul-nyberg", "tengfai";

.pattern-picker__item {
	flex: 1;

	// iPhone aspect ratio
	aspect-ratio: 0.48;
	display: flex;
	align-items: center;
	justify-content: center;
	border-radius: 20px; /* stylelint-disable-line scales/radii */
	box-shadow: 2px 2px 10px 0 rgb(66 68 90 / 23%);
	transition: transform 0.4s ease-in-out, opacity 0.3s ease-in-out;
	border: 0.6vh solid #fff;
	margin: 20px 0;
	cursor: pointer;
	padding: 0;
	overflow: hidden;
	min-height: calc(65vh - 50px);
	outline: none;

	@media ( max-height: 375px ) {
		aspect-ratio: 0.5;
	}

	// needed for iOS Safari. iOS has
	@supports ( min-height: 65svh ) {
		min-height: calc(65svh - 50px);
	}

	opacity: 0.5;
	filter: blur(3px);

	&.is-active {
		opacity: 1;
		filter: blur(0);
	}

	.mshots-image-visible {
		max-width: 100%;

		// compensate for the item border to avoid cropping the image's top.
		margin-top: 10px;

		@media ( max-height: 375px ) {
			margin-top: 16px;
		}
	}
}

.pattern-picker__carousel {
	display: flex;
	gap: 20px;
	box-sizing: border-box;
	padding-left: 50%;
	padding-right: 50%;
	overflow: hidden;
	/*!rtl:ignore*/
	direction: ltr;

	// transform transitions during dragging make it laggy
	&.is-dragging {
		.pattern-picker__item {
			transition: opacity 0.3s ease-in-out;
		}
	}
}

.pattern-picker__controls {
	display: none;
	position: absolute;
	width: 100%;
	top: calc(50% - 20px);
	/*!rtl:ignore*/
	direction: ltr;
	padding: 20px;
	box-sizing: border-box;

	@include break-small {
		display: flex;
		justify-content: space-between;
	}
}

.pattern-picker__carousel-nav-button {
	width: 40px;
	height: 40px;
	background: #fff;
	border: 1px solid #eee;
	align-items: center;
	// stylelint-disable-next-line scales/radii
	// stylelint-disable-next-line declaration-property-unit-allowed-list
	border-radius: 50%;
	opacity: 0.5;
	display: flex;
	box-shadow: 1px 1px 3px 0 rgb(0 0 0 / 18%);
	transition: opacity 0.3s ease-in-out;

	cursor: pointer;

	&:hover {
		opacity: 1;
		fill: var(--studio-blue-50);
	}

	&.is-hidden {
		visibility: hidden;
	}
}

.pattern-picker:hover {
	.pattern-picker__carousel-nav-button {
		opacity: 0.8;
	}
}

.pattern-picker__select {
	display: flex;
	justify-content: center;
	text-align: center;
	width: 100%;

	@include break-small {
		// seems like a magic number, but the button should be as wide as the designs
		// and the designs width is tied to the viewport height
		width: 28vh;
	}

	svg {
		display: none;
	}

	use {
		fill: #fff;
	}

	&:not(:disabled):hover {
		svg {
			display: inline;
		}

		span {
			display: none;
		}
	}
}

.pattern-picker__cta {
	text-align: center;
	margin: 10px 20px;
}

