Tailored Flows: fix pattern picker on Safari (#68239)
* Fix pattern picker on Safari

* Remove extraneous margin

* Fix broken margin on mobile

This fixes a broken margin on mobile devices

--- a/packages/pattern-picker/src/styles.scss
+++ b/packages/pattern-picker/src/styles.scss
@@ -41,15 +41,14 @@ $patterns: "17-2", "black", "ella-d", "link-cloud", "matt-smith", "ose-maiko", "
 		filter: blur(0);
 	}
 
+	.mshots-image__container {
+		display: block;
+		height: 100%;
+		width: 100%;
+	}
+
 	.mshots-image-visible {
 		max-width: 100%;
-
-		// compensate for the item border to avoid cropping the image's top.
-		margin-top: 10px;
-
-		@media ( max-height: 375px ) {
-			margin-top: 16px;
-		}
 	}
 }
 
